# multiavatar-python

./: .gitignore  README.md  setup.cfg
multiavatar/: multiavatar.py
tests/: build_index.py  build_other.py
