[metadata]
name = multiavatar
version = 1.0.1
author = Gie Katon
author_email = git@giekaton.com
description = Multicultural Avatar Generator in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://multiavatar.com
project_urls =
    GitHub = https://github.com/multiavatar/multiavatar-python
    Bug Tracker = https://github.com/multiavatar/multiavatar-python/issues
    LICENSE = https://multiavatar.com/license
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6